--- a/content/Error exclude.html
+++ b/content/Error exclude.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='個人簡介.html'>個人簡介</a><li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='stage3-2a.html'>stage3-2a</a></li></ul><li><a href='task 2.html'>task 2</a></li></ul><li><a href='ssh.html'>ssh</a><li><a href='Error exclude.html'>Error exclude</a><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li></li></ul></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li>
+                     <li><a href='個人簡介.html'>個人簡介</a><li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='產品目標.html'>產品目標</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li></li></ul></ul><li><a href='ssh.html'>ssh</a><li><a href='Error exclude.html'>Error exclude</a><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='stage3-2a.html'>stage3-2a</a></li></ul><li><a href='task 2.html'>task 2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,13 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">ssh << <a href='ssh.html'>Previous</a> <a href='籃球機版本.html'>Next</a> >> 籃球機版本<br /><h1>Error exclude</h1>
+    <div id="tipue_search_content">ssh << <a href='ssh.html'>Previous</a> <a href='stage3-ag6.html'>Next</a> >> stage3-ag6<br /><h1>Error exclude</h1>
 <p>協同失誤</p>
 <p>在協同時因為組員們的倉儲版本不同導致無法推送</p>
 <p><img caption="false" height="101" src="./../images/螢幕擷取畫面 2021-04-13 194559.jpg" width="450"/></p>
 <p>最後我們只好將版本不同的倉儲刪掉重新協同</p>
 <p><img alt="" height="261" src="https://40823125.github.io/stage2-ag12/images/Inked%E8%9E%A2%E5%B9%95%E6%93%B7%E5%8F%96%E7%95%AB%E9%9D%A2%202021-04-01%20170231_LI.jpg" width="500"/></p>
-<br />ssh << <a href='ssh.html'>Previous</a> <a href='籃球機版本.html'>Next</a> >> 籃球機版本</div>
+<br />ssh << <a href='ssh.html'>Previous</a> <a href='stage3-ag6.html'>Next</a> >> stage3-ag6</div>
         
     <!-- footer -->
       <div class="container">
