--- a/content/stage3-ag6.html
+++ b/content/stage3-ag6.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='個人簡介.html'>個人簡介</a><li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li class='has-children'><a href='W5.html'>W5</a><ul class='dropdown'><li><a href='產品目標.html'>產品目標</a></li></ul><li><a href='W6.html'>W6</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='stage3-2a.html'>stage3-2a</a></li></ul><li><a href='task 2.html'>task 2</a></li></ul><li><a href='ssh.html'>ssh</a><li><a href='Error exclude.html'>Error exclude</a><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li></li></ul></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li>
+                     <li><a href='個人簡介.html'>個人簡介</a><li class='has-children'><a href='Stage1-ag14.html'>Stage1-ag14</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li class='has-children'><a href='W2.html'>W2</a><ul class='dropdown'><li><a href='零件尺寸及示意圖.html'>零件尺寸及示意圖</a><li><a href='分組開會紀錄.html'>分組開會紀錄</a></li></ul><li class='has-children'><a href='W4.html'>W4</a><ul class='dropdown'><li><a href='PDF.html'>PDF</a></li></li></ul></ul><li class='has-children'><a href='發球機版本.html'>發球機版本</a><ul class='dropdown'><li><a href='第1版.html'>第1版</a><li><a href='第2版.html'>第2版</a><li><a href='第3版.html'>第3版</a><li><a href='第4版.html'>第4版</a><li><a href='第5版.html'>第5版</a></li></ul><li class='has-children'><a href='Stage2-ag12.html'>Stage2-ag12</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='產品目標.html'>產品目標</a><li class='has-children'><a href='W7.html'>W7</a><ul class='dropdown'><li><a href='Heroku 網站建立.html'>Heroku 網站建立</a></li></ul><li><a href='W9.html'>W9</a></li></ul><li class='has-children'><a href='籃球機版本.html'>籃球機版本</a><ul class='dropdown'><li><a href='版本一.html'>版本一</a><li class='has-children'><a href='版本二.html'>版本二</a><ul class='dropdown'><li><a href='2.1.html'>2.1</a><li><a href='2.2.html'>2.2</a><li><a href='2.3.html'>2.3</a><li><a href='2.4.html'>2.4</a></li></li></ul></ul><li><a href='ssh.html'>ssh</a><li><a href='Error exclude.html'>Error exclude</a><li class='has-children'><a href='stage3-ag6.html'>stage3-ag6</a><ul class='dropdown'><li class='has-children'><a href='task 1.html'>task 1</a><ul class='dropdown'><li><a href='stage3-2a.html'>stage3-2a</a></li></ul><li><a href='task 2.html'>task 2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W9 << <a href='W9.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1<br /><h1>stage3-ag6</h1>
+    <div id="tipue_search_content">Error exclude << <a href='Error exclude.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1<br /><h1>stage3-ag6</h1>
 <p><strong>倉儲</strong>:</p>
 <p><a href="https://github.com/40823125/stage3-ag6"><img alt="" height="210" src="./../images/github-mark.png" width="400"/><span></span></a> </p>
 <p><strong>網頁</strong>:</p>
@@ -146,7 +146,7 @@ img.add_border {
 <p><span><a href="https://github.com/40823122/cd2021">40823122 repo<span> </span></a>|<span> </span><a href="https://40823122.github.io/cd2021/content/index.html">40823122 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823129/cd2021">40823129 repo<span> </span></a>|<span> </span><a href="https://40823129.github.io/cd2021/content/index.html">40823129 site</a><span> </span>|</span></p>
 <p><span><a href="https://github.com/40823149/cd2021">40823149 repo<span> </span></a>|<span> </span><a href="https://40823149.github.io/cd2021/content/index.html">40823149 site<span> </span></a>|</span></p>
-<br />W9 << <a href='W9.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1</div>
+<br />Error exclude << <a href='Error exclude.html'>Previous</a> <a href='task 1.html'>Next</a> >> task 1</div>
         
     <!-- footer -->
       <div class="container">
