--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -106,7 +106,7 @@
 <p><span><span> </span></span><a href="http://github.com/40823110/cd2021">40823110 repo</a><span><span> </span>|<span> </span></span><a href="http://40823110.github.io/cd2021">40823110 site</a> |</p>
 <h2>W5</h2>
 <p><img alt="" height="803" src="/images/Screenshot 2021-04-15 155510.png" width="600"/></p>
-<h3>產品目標</h3>
+<h2>產品目標</h2>
 <p>主題:籃球機 二代</p>
 <p></p>
 <p>動機:</p>
@@ -122,8 +122,7 @@
 <p>w8:除錯與修整，完成簡報與pdf</p>
 <p></p>
 <p>w9:報告</p>
-<p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p>
-<h2>W7</h2>
+<p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p><h2>W7</h2>
 <h3>Heroku 網站建立</h3>
 <p><a href="https://stage2-ag12.herokuapp.com/content/index.html">stage2-ag12-heroku網站</a></p>
 <p><strong>1.開通 Heroku 帳號(用學校email建立)</strong></p>
@@ -569,5 +568,10 @@ for i in range(6):
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
-</div>
-</div>
+<h2>W13-14</h2>
+<p>參考資料:</p>
+<p><a href="https://blog.csdn.net/qq_42703283/article/details/101428684"><span style="font-weight: 400;">CoppeliaSim：视觉传感器的使用与属性参数</span></a></p>
+<p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
+<p><a href="https://blog.csdn.net/Csdn_Darry/article/details/107142216"><span style="font-weight: 400;">CoppeliaSim 用户手册</span></a></p>
+<p><span style="font-weight: 400;"><a href="https://www.youtube.com/watch?v=MX3VXvZFk0U">Robotics Simulation: CoppeliaSim, from the Creators of V-REP</a></span></p>
+<p></p></div></div>
