--- a/content/W13-14.html
+++ b/content/W13-14.html
@@ -133,8 +133,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">版本一 << <a href='版本一.html'>Previous</a> <a href='2.1.html'>Next</a> >> 2.1<br /><h1>版本二</h1>
-<br />版本一 << <a href='版本一.html'>Previous</a> <a href='2.1.html'>Next</a> >> 2.1</div>
+    <div id="tipue_search_content">task 2 << <a href='task 2.html'>Previous</a> <br /><h1>W13-14</h1>
+<p>參考資料:</p>
+<p><a href="https://blog.csdn.net/qq_42703283/article/details/101428684"><span style="font-weight: 400;">CoppeliaSim：视觉传感器的使用与属性参数</span></a></p>
+<p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
+<p><a href="https://blog.csdn.net/Csdn_Darry/article/details/107142216"><span style="font-weight: 400;">CoppeliaSim 用户手册</span></a></p>
+<p><span style="font-weight: 400;"><a href="https://www.youtube.com/watch?v=MX3VXvZFk0U">Robotics Simulation: CoppeliaSim, from the Creators of V-REP</a></span></p>
+<p><a href="https://www.youtube.com/watch?v=CVoV08T0Aqo">Pick and place application with KUKA KR16 robot using v-rep (CoppeliaSim) and Matlab</a></p></div></div><br />task 2 << <a href='task 2.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
