--- a/config/content.htm
+++ b/config/content.htm
@@ -568,5 +568,10 @@ for i in range(6):
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
-</div>
-</div>
+<h2>W13-14</h2>
+<p>參考資料:</p>
+<p><a href="https://blog.csdn.net/qq_42703283/article/details/101428684"><span style="font-weight: 400;">CoppeliaSim：视觉传感器的使用与属性参数</span></a></p>
+<p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
+<p><a href="https://blog.csdn.net/Csdn_Darry/article/details/107142216"><span style="font-weight: 400;">CoppeliaSim 用户手册</span></a></p>
+<p><span style="font-weight: 400;"><a href="https://www.youtube.com/watch?v=MX3VXvZFk0U">Robotics Simulation: CoppeliaSim, from the Creators of V-REP</a></span></p>
+<p><a href="https://www.youtube.com/watch?v=CVoV08T0Aqo">Pick and place application with KUKA KR16 robot using v-rep (CoppeliaSim) and Matlab</a></p></div></div>
