--- a/config/content.htm
+++ b/config/content.htm
@@ -569,6 +569,9 @@ for i in range(6):
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
 <h2>W13-14</h2>
+<p><a href="https://drive.google.com/file/d/1YOP5Q7wTjEPT15hSmSKPPZYY97R31b9S/view?usp=sharing">範例</a></p>
+<p><a href="https://drive.google.com/file/d/1dg8JT-eVdxi35Ih2qHo-6JDIwFy2KcUb/view?usp=sharing">sensor test(未完成)</a></p>
+<p><a href="https://drive.google.com/file/d/1bcIM18hiCkBu18qGmi5mSuuOYOlekIyB/view?usp=sharing">MTB test(未完成)</a></p>
 <p>參考資料:</p>
 <p><a href="https://blog.csdn.net/qq_42703283/article/details/101428684"><span style="font-weight: 400;">CoppeliaSim：视觉传感器的使用与属性参数</span></a></p>
 <p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
