--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -574,4 +574,4 @@ for i in range(6):
 <p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
 <p><a href="https://blog.csdn.net/Csdn_Darry/article/details/107142216"><span style="font-weight: 400;">CoppeliaSim 用户手册</span></a></p>
 <p><span style="font-weight: 400;"><a href="https://www.youtube.com/watch?v=MX3VXvZFk0U">Robotics Simulation: CoppeliaSim, from the Creators of V-REP</a></span></p>
-<p></p></div></div>
+<p><a href="https://www.youtube.com/watch?v=CVoV08T0Aqo">Pick and place application with KUKA KR16 robot using v-rep (CoppeliaSim) and Matlab</a></p></div></div>
