--- a/config/content.htm
+++ b/config/content.htm
@@ -122,7 +122,8 @@
 <p>w8:除錯與修整，完成簡報與pdf</p>
 <p></p>
 <p>w9:報告</p>
-<p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p><h2>W7</h2>
+<p><a href="https://40823152.github.io/stage2-ag12/content/index.html"></a></p>
+<h2>W7</h2>
 <h3>Heroku 網站建立</h3>
 <p><a href="https://stage2-ag12.herokuapp.com/content/index.html">stage2-ag12-heroku網站</a></p>
 <p><strong>1.開通 Heroku 帳號(用學校email建立)</strong></p>
@@ -568,7 +569,20 @@ for i in range(6):
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
-<h2>W13-14</h2>
+<h2>W13-W15</h2>
+<h3>gogs操作</h3>
+<p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
+<p><img alt="" height="257" src="/images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
+<p><img alt="" height="389" src="/images/螢幕擷取畫面 2021-06-03 154052.jpg" width="500"/></p>
+<p>2.設定git remote add</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git remote add fossil http://fossil.kmol.info:3000/學號/cd2021.git</pre>
+<p>3.推送git push fossil</p>
+<p>4.設定ssh(與github和gitlab相同)</p>
+<p><img alt="" height="258" src="/images/螢幕擷取畫面 2021-06-03 154546.jpg" width="500"/></p>
+<p>5.設定putty</p>
+<p><img alt="" height="451" src="/images/螢幕擷取畫面 2021-06-03 155040.jpg" width="500"/></p>
+<p></p>
+<p></p><h3>CoppeliaSim 控制程式</h3>
 <p><a href="https://drive.google.com/file/d/1YOP5Q7wTjEPT15hSmSKPPZYY97R31b9S/view?usp=sharing">範例</a></p>
 <p><a href="https://drive.google.com/file/d/1dg8JT-eVdxi35Ih2qHo-6JDIwFy2KcUb/view?usp=sharing">sensor test(未完成)</a></p>
 <p><a href="https://drive.google.com/file/d/1bcIM18hiCkBu18qGmi5mSuuOYOlekIyB/view?usp=sharing">MTB test(未完成)</a></p>
