--- a/content/gogs操作.html
+++ b/content/gogs操作.html
@@ -133,13 +133,19 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第1版 << <a href='第1版.html'>Previous</a> <a href='第3版.html'>Next</a> >> 第3版<br /><h1>第2版</h1>
-<p><marquee behavior="alternate" bgcolor="#FF5959" direction="up" height="35" scrollamount="1.5" width="300"><a href="./../downloads/組合圖-2.stl">組合圖-2.stl</a>|<a href="./../downloads/發球機主體-2.stl">發球機主體-2.stl</a>|<a href="./../downloads/引球圓盤-2.stl">引球圓盤-2.stl</a></marquee></p>
-<p><a href="https://drive.google.com/file/d/1GsmMkOOK3HrquF32gm09deCQAFWCTjaf/view?usp=sharing">發球機組合圖-2.ttt</a></p>
-<p>在發球機的引球圓盤旋轉時，<span>引球圓盤會微微的上下震動:</span></p>
-<p>    我認為<span>引球圓盤跟轉軸是一體的，所以引球圓盤的軸跟主體的孔接觸導致引球圓盤會微微的上下震動，我猜測只要將引球圓盤的軸獨立出來就可以解決這個問題</span></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/fvoF_d6DNsk" width="560"></iframe></p>
-<br />第1版 << <a href='第1版.html'>Previous</a> <a href='第3版.html'>Next</a> >> 第3版</div>
+    <div id="tipue_search_content">W13-W15 << <a href='W13-W15.html'>Previous</a> <a href='CoppeliaSim 控制程式.html'>Next</a> >> CoppeliaSim 控制程式<br /><h1>gogs操作</h1>
+<p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
+<p><img alt="" height="257" src="./../images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
+<p><img alt="" height="389" src="./../images/螢幕擷取畫面 2021-06-03 154052.jpg" width="500"/></p>
+<p>2.設定git remote add</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">git remote add fossil http://fossil.kmol.info:3000/學號/cd2021.git</pre>
+<p>3.推送git push fossil</p>
+<p>4.設定ssh(與github和gitlab相同)</p>
+<p><img alt="" height="258" src="./../images/螢幕擷取畫面 2021-06-03 154546.jpg" width="500"/></p>
+<p>5.設定putty</p>
+<p><img alt="" height="451" src="./../images/螢幕擷取畫面 2021-06-03 155040.jpg" width="500"/></p>
+<p></p>
+<p></p><br />W13-W15 << <a href='W13-W15.html'>Previous</a> <a href='CoppeliaSim 控制程式.html'>Next</a> >> CoppeliaSim 控制程式</div>
         
     <!-- footer -->
       <div class="container">
