--- a/content/Inverse kinematics for a 2-joint robot arm using algebra.html
+++ b/content/Inverse kinematics for a 2-joint robot arm using algebra.html
@@ -133,13 +133,42 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p>1.建立倉儲</p>
-<p>2.尋找組員:</p>
-<p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
-<p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<br />Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">Inverse kinematics for a 2-joint robot arm using geometry << <a href='Inverse kinematics for a 2-joint robot arm using geometry.html'>Previous</a> <br /><h1>Inverse kinematics for a 2-joint robot arm using algebra</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eIZuz1XCd0w" width="560"></iframe></p>
+<p><span>Here we have the same two link robot as we just looked at but this time we're going tosolve it using an analytical approach , that is we're going to rely much more on algebra ,particular linear algebra rather than geometry .</span></p>
+<p><span>在這裡，我們有與剛剛看到的相同的兩連桿機構，但這次我們將使用分析方法來解決它，也就是說，我們將更多地依賴代數，特別是線性代數而不是幾何。</span></p>
+<p><span>We have an expression E , which is the homogeneous transformation which represents the pose of the robots end effector and we looked at this in the last lecture , we can write the end effector pose as a sequence of elementary homogeneous transformations .</span></p>
+<p><span>我們有一個表達式 E，它是表示機構</span><span>最終位置的齊次變換，我們在上一課中看到了這一點，我們可以將最終位置寫為一系列基本齊次變換。</span></p>
+<p><span>A rotation by Q1 , a translation along the X direction by A1 , a rotation by Q2 and then a translation in the X direction by A2 .</span></p>
+<p><span>Q1 旋轉，A1 沿 X 方向平移，Q2 旋轉，然後 A2 沿 X 方向平移。</span></p>
+<p><span>If I expand this out , multiply all the transformations together , I get the expression shown here ; a three by three homogeneous transformation matrix representing the pose of the robot's end effector .</span></p>
+<p><span>如果我將其展開，將所有變換相乘，就會得到此處所示的表達式；一個三乘三的齊次變換矩陣，表示機構的最終位置。</span></p>
+<p><span>Now for this particular two link robot , we are only interested in the position of its <span>end effector</span> , it's X and Y co - ordinate and they are these two elements within the homogeneous transformation matrix , so I'm going to copy those out .</span></p>
+<p><span>現在對於這個特殊的兩連桿機構，我們只對它的最終位置感興趣，它是 X 和 Y 坐標，它們是齊次變換矩陣中的這兩個元素，所以我將把它們複製出來。</span></p>
+<p><span>So here again is our expression for X and Y and what we're going to do is a fairly common trick , we're going to square and add these two equations and I get a relationship that looks like this .</span></p>
+<p><span>所以這裡又是我們對 X 和 Y 的表達式，我們要做的是一個相當常見的技巧，我們要平方並添加這兩個方程，我得到一個看起來像這樣的關係。</span></p>
+<p><span>Now I can solve for the joint angle Q2 in terms of the <span><span>end effector</span></span> pose X and Y and the robot's constants A1 and A2.</span></p>
+<p><span>現在我可以根據最終位置X 和 Y 以及機器人的常數 A1 和 A2 來求解關節角度 Q2。</span></p>
+<p><span>Now what I'm going to do is apply the sum of angles identity .</span></p>
+<p><span>現在我要做的是應用角度之和的特性。</span></p>
+<p><span>I'm going to expand these terms, sine of Q1 plus Q2 or cos of Q1 plus Q2 and to make life a little bit easier, I'm going to make some substations, so where ever I had cos Q2, I'm going to write C2 and where ever I had sine Q2, I'm going to write S2.</span></p>
+<p><span>我將擴展這些術語，Q1 的正弦加 Q2 或 Q1 的 cos 加 Q2，為了讓生活更輕鬆一點，我將建造一些變電站，所以只要有 cos Q2，我就會去寫 C2 並且在我有正弦 Q2 的地方，我要寫 S2。</span></p>
+<p><span>It's a fairly common shorthand when people are looking at robot kinematic equations.</span></p>
+<p><span>當人們查看機構運動學方程式時，這是一個相當常見的記法。</span></p>
+<p><span>And here are the equations after making those substitutions.</span></p>
+<p><span>這是進行這些替換後的方程式。</span></p>
+<p><span>Looking at these two equations, I can see that they fall into a very well known form and for that form there is a very well known solution.</span></p>
+<p><span>看看這兩個方程式，我可以看到它們屬於一個眾所周知的形式，對於這種形式，有一個眾所周知的解決方案。</span></p>
+<p><span>So I'm going to consider just one of the equations, the equation for Y and using our well known identity and it's solution, I can determine the values for the variables little a, little b and little c and once l've determined those, then I can just write down the solution for Q1, which x is the equivalent of theta in this particular case.</span></p>
+<p><span>所以我將只考慮其中一個方程，Y 的方程，並使用我們眾所周知的恆等式和它的解，我可以確定變量小 a、小 b 和小 c 的值，一旦我確定了這些，然後我可以寫下 Q1 的解決方程，在這種特殊情況下，x 相當於<span> </span><span>θ</span>。</span></p>
+<p><span>Here again is our expression for Q1, copied over from the previous slide and we may remember from earlier in our workings that we determined this particular relationship; X squared plus Y squared is equal to this particular complex expression.</span></p>
+<p><span>這裡再次是我們對 Q1 的表達，從上一張幻燈片複製過來，我們可能還記得在我們早期的說明中，確定了這種特殊關係； X 平方加 Y 平方等於這個特定的複雜表達式。</span></p>
+<p><span>So I can substitute that in and do some simplification and I end up with this slightly less complex expression for Q1.</span></p>
+<p><span>因此，我可以將其替換並進行一些簡化，最終得到 Q1 的這個稍微不那麼複雜的表達式。</span></p>
+<p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
+<p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p>
+<p><strong>看完影片後得知:</strong></p>
+<p><span><img alt="" height="225" src="./../images/螢幕擷取畫面 2021-06-10 173704.jpg" width="500"/></span></p></div></div><br />Inverse kinematics for a 2-joint robot arm using geometry << <a href='Inverse kinematics for a 2-joint robot arm using geometry.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
