--- a/content/Inverse kinematics for a 2-joint robot arm using geometry.html
+++ b/content/Inverse kinematics for a 2-joint robot arm using geometry.html
@@ -133,13 +133,119 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p>1.建立倉儲</p>
-<p>2.尋找組員:</p>
-<p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
-<p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<br />Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='Inverse kinematics for a 2-joint robot arm using algebra.html'>Next</a> >> Inverse kinematics for a 2-joint robot arm using algebra<br /><h1>Inverse kinematics for a 2-joint robot arm using geometry</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IKOGwoJ2HLk" width="560"></iframe></p>
+<p>We saw this simple two-link robot in the previous lecture about forward kinematics.</p>
+<p>我們在上一堂關於正向運動學的講座中看到了這個簡單的雙連桿機構。</p>
+<p>The tooltip pose of this robot is described simply by two numbers, the coordinates x and y with respect to the world coordinate frame.</p>
+<p>該機器人的工具提示姿態由兩個數字簡單描述，即相對於世界坐標系的坐標 x 和 y。</p>
+<p>So, the problem here is that given x and y, we want to determine the joined angles, Q1<br/>and Q2.</p>
+<p>所以，這裡的問題是給定 x 和 y，我們要確定連接角 Q1<br/>和 Q2。</p>
+<p>The solution that we’re going to follow in this particular section is a geometric<br/>one.</p>
+<p>我們將在本節中遵循的解決方案是幾何解決方案。</p>
+<p>We’re going to start with a simple piece of construction.</p>
+<p>我們將從一個簡單的結構開始。</p>
+<p>We’re going to overlay the red triangle on top of our robot.</p>
+<p>我們將在機構頂部覆蓋紅色三角形。</p>
+<p>We know that the end point coordinate is x, y, so the vertical height of the triangle is y,horizontal width is x.</p>
+<p>我們知道終點坐標是x，y，所以三角形的垂直高度是y，水平寬度是x。</p>
+<p>And, using Pythagoras theorem, we can write r squared equals x squared plus y squared.</p>
+<p>並且，使用畢達哥拉斯定理，我們可以寫出 r 平方等於 x 平方加上 y 平方。</p>
+<p>So far, so easy.</p>
+<p>到目前為止，很容易。</p>
+<p>Now, we’re going to look at this triangle highlighted here in red and we want to determine<br/>the angle alpha.</p>
+<p>現在，我們將查看此處以紅色突出顯示的三角形，我們想確定<br/>角度α。</p>
+<p>In order to do that, we need to use the cosine rule.</p>
+<p>為了做到這一點，我們需要使用餘弦規則。</p>
+<p>And, if you’re a little rusty on the cosine rule, here is a bit of a refresher.</p>
+<p>而且，如果你對餘弦規則有點生疏，這裡有一點複習。</p>
+<p>We have an arbitrary triangle.</p>
+<p>我們有一個任意三角形。</p>
+<p>We don't have to have any right angles in it and we're going to label the length of this edge as A and the angle opposite that edge, we're going to label as little a.</p>
+<p>我們不必在其中有任何直角，我們將這條邊的長度標記為 A，而與該邊相對的角度，我們將標記為小 a。</p>
+<p>And, we do the same for this edge and this angle, and this edge and this angle.</p>
+<p>並且，我們對這條邊和這個角，以及這條邊和這個角做同樣的事情。</p>
+<p>So, all together, the sides are labelled capitals A, B and C, and the angles are labelled little a, little b, and little c.</p>
+<p>因此，所有邊都標記為大寫字母 A、B 和 C，角標記為小 a、小 b 和小 c。</p>
+<p>So, the cosine rule is simply this relationship here.</p>
+<p>所以，餘弦規則就是這裡的這種關係。</p>
+<p>It's a bit like Pythagoras' theorem except for this extra term on the end with the cos a in it.</p>
+<p>它有點像畢達哥拉斯的定理，除了最後一個額外的術語，其中有 cos a。</p>
+<p>Now, let’s apply the cosine rule to the particular triangle we looked at a moment<br/>ago.</p>
+<p>現在，讓我們將餘弦規則應用於我們剛才看到的特定三角形。</p>
+<p>It’s pretty straightforward to write down this particular relationship.</p>
+<p>寫下這種特殊關係非常簡單。</p>
+<p>We can isolate the term cos alpha which gives us the angle alpha that we’re interested in.</p>
+<p>我們可以分離出術語 cosα，它給出了我們感興趣的角度α。</p>
+<p>And, it’s defined in terms of the constant link lengths, A1 and A2 and the position of the end effector, x and y.</p>
+<p>而且，它是根據恆定連桿長度 A1 和 A2 以及末端執行器的位置 x 和 y 定義的。</p>
+<p>We can write this simple relationship between the angles alpha and Q2.</p>
+<p>我們可以寫出角度α和 Q2 之間的這種簡單關係。</p>
+<p>And, we know from the shape of the cosine function that cos of Q2 must be equal to negative of cos alpha.</p>
+<p>而且，我們從餘弦函數的形狀知道，Q2 的 cos 必須等於 cosα的負值。</p>
+<p>This time, let’s just write an expression for the cosine of the joined angle Q2.</p>
+<p>這一次，讓我們為連接角 Q2 的餘弦寫一個表達式。</p>
+<p>Now, we're going to draw yet another red triangle and we're going apply some simple trigonometry here.</p>
+<p>現在，我們將繪製另一個紅色三角形，並在此處應用一些簡單的三角函數。</p>
+<p>If we know Q2, then we know this length and this length of the red triangle.</p>
+<p>如果我們知道 Q2，那麼我們就知道這個長度和這個紅色三角形的長度。</p>
+<p>We can write this relationship for the sine of the joined angle Q2.</p>
+<p>我們可以為連接角 Q2 的正弦寫出這種關係。</p>
+<p>Now, we can consider this bigger triangle whose angle is beta and this side length of the triangle is given here in blue.</p>
+<p>現在，我們可以考慮這個更大的三角形，它的角是β，三角形的這條邊長在這裡用藍色給出。</p>
+<p>And, the length of the other side of the triangle is this.</p>
+<p>並且，三角形另一邊的長度是這個。</p>
+<p>So, now we can write an expression for the angle beta in terms of these parameters here.</p>
+<p>所以，現在我們可以在此處根據這些參數編寫角度β的表達式。</p>
+<p>Going back to the red triangle that we drew earlier, we can establish a relationship between Q1 and the angle beta.</p>
+<p>回到我們之前畫的紅色三角形，我們可以建立Q1和角度β之間的關係。</p>
+<p>Introduce yet another angle, this one gamma and we can write a relationship between the angle gamma and the tooltip coordinates x and y.</p>
+<p>引入另一個角度，這個<span face="新細明體" style="font-family: 新細明體;">γ</span>，我們可以寫出角度<span face="新細明體" style="font-family: 新細明體;">γ</span>和工具提示坐標 x 和 y 之間的關係。</p>
+<p>Now, we can write a simple relationship between the angles that we've constructed, gamma and beta and the joined angle we're interested in which is Q1.</p>
+<p>現在，我們可以在我們構建的角度<span face="新細明體" style="font-family: 新細明體;">γ</span>和β與我們感興趣的連接角度 Q1 之間寫出一個簡單的關係式。</p>
+<p>And, the total relationship looks something like this.</p>
+<p>而且，整個關係式看起來像這樣。</p>
+<p>Quite a complex relationship, it gives us the angle of joined one, that's Q1 in terms of the end effector coordinates y and x, and a bunch of constants, a1 and a2, and it's also a function of the second joint angle, Q2.</p>
+<p>相當複雜的關係，它為我們提供了連接的角度，即根據末端執行器坐標 y 和 x 的 Q1，以及一系列常量 a1 和 a2，它也是第二個關節角度 Q2 的方程式。</p>
+<p>So, let’s summarize what it is that we have derived here.</p>
+<p>所以，讓我們總結一下我們在這裡得出的結論。</p>
+<p>We have an expression for the cosine of Q2 and we have an expression for Q1.</p>
+<p>我們有 Q2 的餘弦表達式和 Q1 的表達式。</p>
+<p>Now, the cosine function is symmetrical about 0.</p>
+<p>現在，餘弦函數於 0 對稱。</p>
+<p>So, if we know the value of the cosine of Q2, then there are two possible solutions, a positive angle and a negative angle.</p>
+<p>所以，如果我們知道 Q2 的餘弦值，那麼有兩種可能的解，一個正角和一個負角。</p>
+<p>We're going to explicitly choose the positive angle, which means that I can write this expression here.</p>
+<p>我們將明確選擇正角，這意味著我可以在這裡寫這個表達式。</p>
+<p>And now, we have what we call the inverse kinematic solution for this two-link robot.</p>
+<p>現在，我們有了這個雙連桿機構的逆運動學解決方案。</p>
+<p>We have an expression for the two joined angles, Q1 and Q2 in terms of the end effector pose x and y, and a bunch of constants.</p>
+<p>我們有兩個連接角 Q1 和 Q2 的表達式，根據末端執行器姿勢 x 和 y 以及一系列常數。</p>
+<p>You notice that the two equations are not independent.</p>
+<p>你注意到這兩個方程不是獨立的。</p>
+<p>The equation for Q1, in fact, depends on the solution for Q2.</p>
+<p>事實上，Q1 的方程取決於 Q2 的解。</p>
+<p>In this case, Q2 is negative and we're going to write the solution for Q2 with a negative sign in front of the inverse cosine.</p>
+<p>在這種情況下，Q2 是負數，我們將在反餘弦前用負號編寫 Q2 的解。</p>
+<p>Now, we need to solve for Q1, so we're going to introduce this particular red triangle, the angle beta that we solved previously, and the angle gamma which is defined in terms of y and x.</p>
+<p>現在，我們需要求解 Q1，因此我們將介紹這個特定的紅色三角形、我們之前求解的角度β以及根據 y 和 x 定義的角度<span face="新細明體" style="font-family: 新細明體;">γ</span>。</p>
+<p>Now, we write a slightly different relationship between q1, gamma and beta, different to what we had before.</p>
+<p>現在，我們在 q1、<span face="新細明體" style="font-family: 新細明體;">γ</span>和β 之間寫出略有不同的關係式，與我們之前的關係式不同。</p>
+<p>There’s a change of sign involved.</p>
+<p>涉及到符號的變化。</p>
+<p>Then, we can substitute all that previous equation and come up with this expression for q1.</p>
+<p>然後，我們可以替換之前的所有等式，並得出 q1 的這個表達式。</p>
+<p>Again, there is a change of sign here.</p>
+<p>同樣，這裡的符號發生了變化。</p>
+<p>Previously, this was a negative sign.</p>
+<p>之前，這是一個負數。</p>
+<p>And, here in summary form is the solution for the inverse kinematics of our two-link robot when it is in this particular configuration, where q2 is negative.</p>
+<p>並且，這裡是我們的雙連桿機構在這種特定配置下的逆運動學的總結形式，其中 q2 為負。</p>
+<p>Let’s compare the two solutions, the case where q2 is positive and the case where q2 is negative.</p>
+<p>讓我們比較兩個解決方案，q2 為正的情況和 q2 為負的情況。</p>
+<p><strong>看完影片後得知:</strong></p>
+<p><img alt="" height="238" src="./../images/螢幕擷取畫面 2021-06-10 165126.jpg" width="500"/></p>
+<p><img alt="" height="257" src="./../images/螢幕擷取畫面 2021-06-10 170045.jpg" width="500"/></p><br />W15 << <a href='W15.html'>Previous</a> <a href='Inverse kinematics for a 2-joint robot arm using algebra.html'>Next</a> >> Inverse kinematics for a 2-joint robot arm using algebra</div>
         
     <!-- footer -->
       <div class="container">
