--- a/content/W14.html
+++ b/content/W14.html
@@ -133,13 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2<br /><h1>W1</h1>
-<p>1.建立倉儲</p>
-<p>2.尋找組員:</p>
-<p>40823125<span> </span><a href="https://github.com/40823125/cd2021">倉儲</a><span> </span><a href="https://40823125.github.io/cd2021/">網頁</a></p>
-<p>40823110 <a href="https://github.com/40823110/cd2021">倉儲</a><span><span> </span></span><a href="https://40823110.github.io/cd2021/">網頁</a></p>
-<p>40823132<span><span> </span><a href="https://github.com/40823132/cd2021">倉儲</a> <a href="https://40823132.github.io/cd2021/">網頁</a></span></p>
-<br />Stage1-ag14 << <a href='Stage1-ag14.html'>Previous</a> <a href='W2.html'>Next</a> >> W2</div>
+    <div id="tipue_search_content">gogs操作 << <a href='gogs操作.html'>Previous</a> <a href='CoppeliaSim 控制程式.html'>Next</a> >> CoppeliaSim 控制程式<br /><h1>W14</h1>
+<br />gogs操作 << <a href='gogs操作.html'>Previous</a> <a href='CoppeliaSim 控制程式.html'>Next</a> >> CoppeliaSim 控制程式</div>
         
     <!-- footer -->
       <div class="container">
