--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -702,7 +702,7 @@ for i in range(6):
 <p>並且，這裡是我們的雙連桿機構在這種特定配置下的逆運動學的總結形式，其中 q2 為負。</p>
 <p>Let’s compare the two solutions, the case where q2 is positive and the case where q2 is negative.</p>
 <p>讓我們比較兩個解決方案，q2 為正的情況和 q2 為負的情況。</p>
-<p>看完影片後得知:</p>
+<p><strong>看完影片後得知:</strong></p>
 <p><img alt="" height="238" src="/images/螢幕擷取畫面 2021-06-10 165126.jpg" width="500"/></p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2021-06-10 170045.jpg" width="500"/></p><h3>Inverse kinematics for a 2-joint robot arm using algebra</h3>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eIZuz1XCd0w" width="560"></iframe></p>
@@ -739,4 +739,8 @@ for i in range(6):
 <p><span>And it is the same expression that I got following the geometric approach in the previous section.</span></p>
 <p><span>這與我在上一節中遵循幾何方法得到的表達式相同。</span></p>
 <p><strong>看完影片後得知:</strong></p>
-<p><span><img alt="" height="225" src="/images/螢幕擷取畫面 2021-06-10 173704.jpg" width="500"/></span></p></div></div>
+<p><span><img alt="" height="225" src="/images/螢幕擷取畫面 2021-06-10 173704.jpg" width="500"/></span></p>
+<h2>W16</h2>
+<p><a href="https://cad.onshape.com/documents/c87d57ce9bd18d98c0e6db80/w/db61257b17da434d6db8c693/e/fb5500c4216b7c97973be646">Onshape MTB_Robot</a></p>
+<p><a href="https://drive.google.com/drive/folders/1LtZeg5P2-S43Ac6AlJrfnSzVOzQI9a3S?usp=sharing">MTB_Robot stl檔</a></p>
+<p></p></div></div>
