--- a/content/W16.html
+++ b/content/W16.html
@@ -133,22 +133,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W1 << <a href='W1.html'>Previous</a> <a href='零件尺寸及示意圖.html'>Next</a> >> 零件尺寸及示意圖<br /><h1>W2</h1>
-<p><strong>內容討論:</strong></p>
-<p><span>stage1-ag14 發球機</span></p>
-<p><strong>製作動機:</strong><br/><span>因為我們的組員裡有一個人是桌球社社長,他想要藉由發球機提供球員自主練習機會。</span></p>
-<p><strong>製作規劃:</strong><br/><span>第二周:繪製零件圖並組合。</span><br/><span>第三周:用CoppeliaSim測試並修改。</span><br/><span>第四周:報告。</span></p>
-<p><strong>任務分配:</strong></p>
-<p>40823125:</p>
-<p><span>CoppeliaSim測試</span></p>
-<p><span>轉換為Inventor檔並組合</span></p>
-<p><span>簡報製作</span></p>
-<p><span>PDF製作</span></p>
-<p>40823110:</p>
-<p>製圖(Onshape)<span></span></p>
-<p>40823132:</p>
-<p></p>
-<br />W1 << <a href='W1.html'>Previous</a> <a href='零件尺寸及示意圖.html'>Next</a> >> 零件尺寸及示意圖</div>
+    <div id="tipue_search_content">Inverse kinematics for a 2-joint robot arm using algebra << <a href='Inverse kinematics for a 2-joint robot arm using algebra.html'>Previous</a> <br /><h1>W16</h1>
+<p><a href="https://cad.onshape.com/documents/c87d57ce9bd18d98c0e6db80/w/db61257b17da434d6db8c693/e/fb5500c4216b7c97973be646">Onshape MTB_Robot</a></p>
+<p><a href="https://drive.google.com/drive/folders/1LtZeg5P2-S43Ac6AlJrfnSzVOzQI9a3S?usp=sharing">MTB_Robot stl檔</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zQT-bwMZL9A" width="560"></iframe></p>
+<p></p></div></div><br />Inverse kinematics for a 2-joint robot arm using algebra << <a href='Inverse kinematics for a 2-joint robot arm using algebra.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
