--- a/content/Python remote API 逆向運動學函式.html
+++ b/content/Python remote API 逆向運動學函式.html
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">task 2 << <a href='task 2.html'>Previous</a> <a href='gogs操作.html'>Next</a> >> gogs操作<br /><h1>W13</h1><br />task 2 << <a href='task 2.html'>Previous</a> <a href='gogs操作.html'>Next</a> >> gogs操作</div>
+    <div id="tipue_search_content">逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <br /><h1>Python remote API 逆向運動學函式</h1></div></div><br />逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
