W16 逆向運動學函式 add

--- a/content/Python remote API 逆向運動學函式.html
+++ b/content/Python remote API 逆向運動學函式.html
@@ -133,7 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <br /><h1>Python remote API 逆向運動學函式</h1></div></div><br />逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> </div>
+    <div id="tipue_search_content">逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> <br /><h1>Python remote API 逆向運動學函式</h1>
+<p>利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放</p></div></div><br />逆向運動學函式 << <a href='逆向運動學函式.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
