--- a/content/手臂末端加入 components-gripper-suction pad 吸盤.html
+++ b/content/手臂末端加入 components-gripper-suction pad 吸盤.html
@@ -135,7 +135,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">建立 CoppeliaSim 4.1.0 MTB robot 場景 << <a href='建立 CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式<br /><h1>手臂末端加入 components-gripper-suction pad 吸盤</h1>
 <p>接續MTB Robot keyboard, 在其抓物品的桿件上加suction pad</p>
-<p><a href="https://drive.google.com/file/d/1Lgcm7BsRsACxg3j7cqFv4ilPuhzzKFG-/view?usp=sharing">W16_exam_MTB_robot keyboard add suction pad.7z</a></p>
+<p><a href="https://drive.google.com/file/d/18g-diZcB7OOce-bCbxj5UJYWtZ2a4Aq_/view?usp=sharing">W16_exam_MTB_robot keyboard add suction pad.7z</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/3bXMnqghFik" width="560"></iframe></p>
 <p><strong>Lua程式:</strong></p>
 <pre class="brush:lua;auto-links:false;toolbar:false" contenteditable="false">function sysCall_init()
      axis1=sim.getObjectHandle('MTB_axis1')
@@ -213,8 +214,7 @@ function sysCall_cleanup()
 end
  
 </pre>
-<p></p>
-<br />建立 CoppeliaSim 4.1.0 MTB robot 場景 << <a href='建立 CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
+<p></p><br />建立 CoppeliaSim 4.1.0 MTB robot 場景 << <a href='建立 CoppeliaSim 4.1.0 MTB robot 場景.html'>Previous</a> <a href='逆向運動學函式.html'>Next</a> >> 逆向運動學函式</div>
         
     <!-- footer -->
       <div class="container">
