W16 Final product update

--- a/content/逆向運動學函式.html
+++ b/content/逆向運動學函式.html
@@ -136,7 +136,10 @@ img.add_border {
     <div id="tipue_search_content">手臂末端加入 components-gripper-suction pad 吸盤 << <a href='手臂末端加入 components-gripper-suction pad 吸盤.html'>Previous</a> <a href='Python remote API 逆向運動學函式.html'>Next</a> >> Python remote API 逆向運動學函式<br /><h1>逆向運動學函式</h1>
 <p><span>使用老師的逆運動學函式求出終點位置的位移，使MTB_robot在coppeliasim裡可以順利達到老師要求的位置</span></p>
 <p><span><a href="https://drive.google.com/file/d/18gWlnhcRQj3uRjgt2QCEbnUu60jNp4Sr/view?usp=sharing">MTB_force mode.7z</a></span></p>
+<p><strong>第一版:</strong></p>
 <p><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/J0m9TPJ3oR8" width="560"></iframe></span></p>
+<p><strong>第二版:</strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dp8DqVPdMtE" width="560"></iframe></strong></p>
 <p><strong>Mtb_robot_keyboard.lua:</strong></p>
 <pre class="brush:lua;auto-links:false;toolbar:false" contenteditable="false">&lt;?xml version="1.0" encoding="utf-8"?&gt;
 &lt;!-- Created by Leo: http://leoeditor.com/leo_toc.html --&gt;
@@ -561,7 +564,7 @@ end
 &lt;/tnodes&gt;
 &lt;/leo_file&gt;
 </pre>
-<p><strong></strong></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/swlLFBmwCfo" width="560"></iframe></strong></p>
 <p><strong>Mtb_robot_loop.lua:</strong></p>
 <pre class="brush:lua;auto-links:false;toolbar:false" contenteditable="false">function sysCall_threadmain()
     -- do some initialization here
