--- a/content/fossil 教學.html
+++ b/content/fossil 教學.html
@@ -133,9 +133,28 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='W4.html'>Next</a> >> W4<br /><h1>分組開會紀錄</h1>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/dLK8QT6gpw8" width="560"></iframe></p>
-<br />零件尺寸及示意圖 << <a href='零件尺寸及示意圖.html'>Previous</a> <a href='W4.html'>Next</a> >> W4</div>
+    <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='Inverse kinematics for a 2-joint robot arm using geometry.html'>Next</a> >> Inverse kinematics for a 2-joint robot arm using geometry<br /><h1>fossil 教學</h1>
+<p>進入<a href="https://fossil.kmol.info:9443/">https://fossil.kmol.info:9443</a> 登入學校email</p>
+<p>在Y:\tmp\fossil&gt;下clone連結</p>
+<p><img alt="" height="46" src="./../images/螢幕擷取畫面 2021-06-16 201019.jpg" width="500"/></p>
+<p>https://fossil.kmol.info/u/倉儲名稱/home</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">fossil clone https://倉儲名稱@fossil.kmol.info/u/倉儲名稱 倉儲名稱.fossil</pre>
+<p>建立wd和cd2021的資料夾</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">mkdir wd
+mkdir cd2021
+cd wd\cd2021
+fossil open ./../../倉儲名稱 .fossil
+在cd2021開啟倉儲名稱 .fossil</pre>
+<p>推送</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">fossil add .
+只有新增物件時用
+fossil addremove
+有刪除物件時用</pre>
+<p><img alt="" height="61" src="./../images/螢幕擷取畫面 2021-06-16 195630.jpg" width="500"/></p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">fossil commit -m "推送名稱"</pre>
+<p>開啟網頁的連結</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">https://fossil.kmol.info/u/倉儲名稱/doc/trunk/index.html</pre>
+<p></p><br />W15 << <a href='W15.html'>Previous</a> <a href='Inverse kinematics for a 2-joint robot arm using geometry.html'>Next</a> >> Inverse kinematics for a 2-joint robot arm using geometry</div>
         
     <!-- footer -->
       <div class="container">
