--- a/content/fossil 教學.html
+++ b/content/fossil 教學.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W15 << <a href='W15.html'>Previous</a> <a href='Inverse kinematics for a 2-joint robot arm using geometry.html'>Next</a> >> Inverse kinematics for a 2-joint robot arm using geometry<br /><h1>fossil 教學</h1>
+<p><a href="https://fossil.kmol.info/u/40823125/dir?ci=tip">倉儲</a> | <a href="https://fossil.kmol.info/u/40823125/doc/trunk/content/index.html">網頁</a></p>
 <p>進入<a href="https://fossil.kmol.info:9443/">https://fossil.kmol.info:9443</a> 登入學校email</p>
 <p>在Y:\tmp\fossil&gt;下clone連結</p>
 <p><img alt="" height="46" src="./../images/螢幕擷取畫面 2021-06-16 201019.jpg" width="500"/></p>
