--- a/content/gogs操作.html
+++ b/content/gogs操作.html
@@ -134,6 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='W14.html'>Next</a> >> W14<br /><h1>gogs操作</h1>
+<p><a href="https://fossil.kmol.info:3443/40823125/cd2021">倉儲</a></p>
 <p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
 <p><img alt="" height="257" src="./../images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
 <p><img alt="" height="389" src="./../images/螢幕擷取畫面 2021-06-03 154052.jpg" width="500"/></p>
