--- a/config/content.htm
+++ b/config/content.htm
@@ -569,7 +569,10 @@ for i in range(6):
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
-<h2>W13</h2><h3>gogs操作</h3>
+<h2>W13</h2>
+<h3>gutlab</h3>
+<p><a href="https://gitlab.com/40823125/cd2021">倉儲</a></p>
+<p><a href="https://40823152.gitlab.io/cd2021/content/gutlab%E6%93%8D%E4%BD%9C.html">40823152 gutlab 教學</a></p><h3>gogs操作</h3>
 <p><a href="https://fossil.kmol.info:3443/40823125/cd2021">倉儲</a></p>
 <p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
@@ -764,7 +767,7 @@ fossil addremove
 <p><strong>看完影片後得知:</strong></p>
 <p><span><img alt="" height="225" src="/images/螢幕擷取畫面 2021-06-10 173704.jpg" width="500"/></span></p>
 <h2>W16</h2>
-<h3>MTB Onshape</h3>
+<p><a href="https://40823152.gitlab.io/cd2021/content/W16.html">參考資料</a></p><h3>MTB Onshape</h3>
 <p><a href="https://cad.onshape.com/documents/c87d57ce9bd18d98c0e6db80/w/db61257b17da434d6db8c693/e/fb5500c4216b7c97973be646">Onshape MTB_Robot</a></p>
 <p><a href="https://drive.google.com/drive/folders/1LtZeg5P2-S43Ac6AlJrfnSzVOzQI9a3S?usp=sharing">MTB_Robot stl檔</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zQT-bwMZL9A" width="560"></iframe></p>
