--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -569,7 +569,10 @@ for i in range(6):
 <p>remote API 操作測試</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WUDqe6oSfwo" width="560"></iframe></p>
 <p>目前在用2W1a.ttt時沒辦法使用老師給的內部IP 192.168.192.1+組別+排序別,進行連線</p>
-<h2>W13</h2><h3>gogs操作</h3>
+<h2>W13</h2>
+<h3>gutlab</h3>
+<p><a href="https://gitlab.com/40823125/cd2021">倉儲</a></p>
+<p><a href="https://40823152.gitlab.io/cd2021/content/gutlab%E6%93%8D%E4%BD%9C.html">40823152 gutlab 教學</a></p><h3>gogs操作</h3>
 <p><a href="https://fossil.kmol.info:3443/40823125/cd2021">倉儲</a></p>
 <p>1.先用<a href="https://fossil.kmol.info:3443">https://fossil.kmol.info:3443</a>創新倉儲，與github倉儲相同的名稱</p>
 <p><img alt="" height="257" src="/images/螢幕擷取畫面 2021-06-03 154013.jpg" width="500"/></p>
@@ -1443,7 +1446,7 @@ end
 </pre>
 <p></p><h3>Python remote API 逆向運動學函式</h3>
 <p>利用 Python remote API 程式重現以迴圈方式執行 W15 兩個指定位置之方塊取放</p>
-<p><a href="https://drive.google.com/file/d/1Lmx1AkJ0_3FnF5H9t0u4TGdUgGffIoD4/view?usp=sharing">MTB_Python remote API.7z</a></p>
+<p><a href="https://drive.google.com/drive/folders/170qvigvqB4LbJS7fxLXlD_7vuOaJKZs4?usp=sharing">MTB_Python remote API.7z</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/AkSXQKHoCms" width="560"></iframe></p>
 <p>remote_api.py:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import sim as vrep
