W18 page&sensor add

--- a/config/content.htm
+++ b/config/content.htm
@@ -586,16 +586,18 @@ for i in range(6):
 <p><img alt="" height="451" src="/images/螢幕擷取畫面 2021-06-03 155040.jpg" width="500"/></p>
 <p></p>
 <p></p><h2>W14</h2>
-<h3>CoppeliaSim 控制程式</h3>
+<h3>CoppeliaSim sensor</h3>
 <p><a href="https://drive.google.com/file/d/1YOP5Q7wTjEPT15hSmSKPPZYY97R31b9S/view?usp=sharing">範例</a></p>
-<p><a href="https://drive.google.com/file/d/1dg8JT-eVdxi35Ih2qHo-6JDIwFy2KcUb/view?usp=sharing">sensor test(未完成)</a></p>
-<p><a href="https://drive.google.com/file/d/1bcIM18hiCkBu18qGmi5mSuuOYOlekIyB/view?usp=sharing">MTB test(未完成)</a></p>
+<p><a href="https://drive.google.com/drive/folders/1vnIIO4SSRHLAeuD9lmH6dk5QqLyOXn7e?usp=sharing">V-REP Inverse Kinematics Tutorial</a></p>
 <p>參考資料:</p>
 <p><a href="https://blog.csdn.net/qq_42703283/article/details/101428684"><span style="font-weight: 400;">CoppeliaSim：视觉传感器的使用与属性参数</span></a></p>
 <p><a href="https://blog.csdn.net/qq_38587510/article/details/104399632"><span style="font-weight: 400;">Memos:V-REP/Coppeliasim视觉传感器的使用</span></a></p>
 <p><a href="https://blog.csdn.net/Csdn_Darry/article/details/107142216"><span style="font-weight: 400;">CoppeliaSim 用户手册</span></a></p>
-<p><span style="font-weight: 400;"><a href="https://www.youtube.com/watch?v=MX3VXvZFk0U">Robotics Simulation: CoppeliaSim, from the Creators of V-REP</a></span></p>
-<p><a href="https://www.youtube.com/watch?v=CVoV08T0Aqo">Pick and place application with KUKA KR16 robot using v-rep (CoppeliaSim) and Matlab</a></p><h2>W15</h2>
+<p><span style="font-weight: 400;"><a href="https://github.com/youtubeSam/V-REP-Inverse-Kinematics">V-REP-Inverse-Kinematics</a></span></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/MX3VXvZFk0U" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CVoV08T0Aqo" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/JUiSZinyH1c" width="560"></iframe></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Sf8E16EK6BQ" width="560"></iframe><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/heNYjDOVcKY" width="560"></iframe></p><h2>W15</h2>
 <h3>fossil 教學</h3>
 <p><a href="https://fossil.kmol.info/u/40823125/dir?ci=tip">倉儲</a> | <a href="https://fossil.kmol.info/u/40823125/doc/trunk/content/index.html">網頁</a></p>
 <p>進入<a href="https://fossil.kmol.info:9443/">https://fossil.kmol.info:9443</a> 登入學校email</p>
@@ -1313,5 +1315,5 @@ function sysCall_sensing()
         end
     end
 end</pre>
-</div>
-</div></div></div>
+<h2>W18</h2>
+<p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p></div></div></div></div>
