--- a/content/協同流程圖.html
+++ b/content/協同流程圖.html
@@ -134,7 +134,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W18 << <a href='W18.html'>Previous</a> <br /><h1>協同流程圖</h1>
-<p><img alt="" height="425" src="./../images/Untitled Diagram(1).png" width="500"/></p>
+<p><img caption="false" height="381" src="./../images/Untitled Diagram.png" width="550"/></p>
 <p></p></div></div></div></div><br />W18 << <a href='W18.html'>Previous</a> </div>
         
     <!-- footer -->
