Collaborative flowchart update

--- a/config/content.htm
+++ b/config/content.htm
@@ -1317,6 +1317,8 @@ end</pre>
 <h2>W18</h2>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing">籃球機 sensor</a></p>
 <p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing">final Basketball-Machine</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x4-fqzVcYUA" width="560"></iframe></p><h3>協同流程圖</h3>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/x4-fqzVcYUA" width="560"></iframe></p><h1>Collaborative flowchart</h1>
+<p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
+<p><span>每一位協同者製作與更改的項目都會顯示在上面，還能輕易地找出之前所做的每一項目和誰有在做事。</span></p>
 <p><img caption="false" height="381" src="/images/Untitled Diagram.png" width="550"/></p>
 <p></p></div></div></div></div>
