--- a/config/content.htm
+++ b/config/content.htm
@@ -1349,7 +1349,8 @@ function sysCall_sensing()
     end
 end</pre>
 <h2>W18</h2>
-<p>senser file link</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/oe02B2H3PpU" width="560"></iframe></p><h3>Sensor</h3>
+<p>sensor file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine3.1.png" width="315"/></a></p>
 <p>完成品:</p>
 <p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="https://40823125.github.io/stage3-ag6/images/Basketball machine3.5.png" width="314"/></a></p>
