--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1349,7 +1349,8 @@ function sysCall_sensing()
     end
 end</pre>
 <h2>W18</h2>
-<p>senser file link</p>
+<h3>Sensor</h3>
+<p>sensor file link</p>
 <p><a href="https://drive.google.com/drive/folders/1OLC3aaZDLjfOV83BSGXqwQgmlf1pcbRD?usp=sharing" title="senser"><img alt="" height="77" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine3.1.png" width="315"/></a></p>
 <p>完成品:</p>
 <p><a href="https://drive.google.com/drive/folders/1Iw-gwgMGPL3zxq9aTTqa3zqRnfZ3IsFi?usp=sharing" title="Basketball machine 3.1"><img alt="" height="76" src="https://40823125.github.io/stage3-ag6/images/Basketball machine3.5.png" width="314"/></a></p>
@@ -1364,8 +1365,7 @@ end</pre>
 <p>那麼就會顯示1分</p>
 <p><img alt="" height="509" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-3.png" width="600"/></p>
 <p>這段程式是為了在製作感測器時能夠方便檢測，所以讓球重生再籃框上的位置</p>
-<p><img alt="" height="490" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-2.png" width="600"/></p>
-<p>畫面看起來會像這樣</p><h1>Collaborative flowchart</h1>
+<p><img alt="" height="490" src="https://40823125.github.io/stage3-ag6/images/Basketball_machine senser3.1-2.png" width="600"/></p><h1>Collaborative flowchart</h1>
 <p><span>我認為藉由此流程圖可以降低內容互相覆蓋，最終造成無法辨識是誰更改內容的情況。</span></p>
 <p><span>每一位協同者製作與更改的項目都會顯示在上面，還能輕易地找出之前所做的每一項目和誰有在做事。</span></p>
 <p><img caption="false" height="381" src="/images/Untitled Diagram.png" width="550"/></p>
